<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yakuza"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoaditya"
        android:layout_width="wrap_content"
        android:layout_height="189dp"
        app:srcCompat="@drawable/_0190429_214209"
        app:layout_constraintTop_toBottomOf="@id/imgButtonAdd"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="526dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/nama"
        android:textColor="#FF3700B3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/gender"
        android:textColor="#FF3700B3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNama" />

    <TextView
        android:id="@+id/txtHobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/hobi"
        android:textColor="#FF3700B3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAlamat" />

    <TextView
        android:id="@+id/txtAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alamat"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:textColor="#FF3700B3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGender"/>

    <EditText
        android:id="@+id/editAlamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/txtAlamat"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtNama"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editNama"
        app:layout_constraintStart_toEndOf="@id/txtGender"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"


        >

        <RadioButton
            android:id="@+id/rbPria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pria"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbWanita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wanita"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbCoding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/coding"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtHobi"
        app:layout_constraintTop_toBottomOf="@id/txtAlamat" />

    <CheckBox
        android:id="@+id/cbReading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/reading"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtHobi"
        app:layout_constraintTop_toBottomOf="@id/cbCoding" />

    <CheckBox
        android:id="@+id/cbTravelling"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/travelling"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtHobi"
        app:layout_constraintTop_toBottomOf="@id/cbReading"

        />

    <CheckBox
        android:id="@+id/cbBermaingame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/main_game"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtHobi"
        app:layout_constraintTop_toBottomOf="@id/cbTravelling"
        />

    <ImageButton
        android:id="@+id/imgButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_delete"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/cbBermaingame"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"

        android:contentDescription="TODO" />

    <ImageButton
        android:id="@+id/imgButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toStartOf="@id/imgButtonCancel"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/cbBermaingame"


        />



</androidx.constraintlayout.widget.ConstraintLayout>